# tt-xla

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_durations  .version  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEGEN_AUTORESEARCH_REPORT.md  CODEGEN_BUGS.md  CODEGEN_EMIT_LOAD_NOTES.md  CODEGEN_HANDOFF.md  CODE_OF_CONDUCT.md  CONCAT_FORCE_EQUAL_INVESTIGATION.md  CONTEXT.md  CONTRIBUTING.md  DEEPSEEK_V32_MOE_FUNCTIONALIZE_FIX.md  DSA_DECODE_ENABLEMENT.md  FLUX1_TRANSFORMER_OOM_HANDOFF.md  FLUX2_ALL_TT_E2E.md  FP8_INDEXER_GAP.md  GDN_SESSION_HANDOFF.md  GPT_OSS_20B_DP_DEBUG_NOTES.md  HOST_BFP_PACKING_VALIDATION.md  HOST_BFP_PACKING_VALIDATION_NOTES.md  IMPLEMENTATION_NOTES.md  LICENSE  MLA_PREFILL_TTMLIR_CHANGES.md  Makefile  NOTICE  PROPOSAL.md  QUETZAL_PLAN.md  README.md  REFACTORING_STATUS.md  SAMPLING_PARAMS_AUDIT.md  SEED_SUPPORT.md  SPHINX_MIGRATION_PLAN.md  SUMMARY.md  TTRUN_SMOKETESTS.md  (+350 more)
.claude/: commit-template.md  install-plugin.sh  (+2 more)
debug_tools/src/: CMakeLists.txt  bindings.cc
pjrt_implementation/src/: CMakeLists.txt  api_bindings.cc  api_bindings.h  dylib_entry_point.cc  python_bindings.cc  stubs.inc
pjrt_implementation/src/api/: CMakeLists.txt  buffer_instance.cc  buffer_metadata_extension.cc  client_instance.cc  compile_options.cc  compile_options_parser.cc  device_description.cc  device_instance.cc  error_instance.cc  event_instance.cc  executable_image.cc  executable_instance.cc  flatbuffer_loaded_executable_instance.cc  loaded_executable_instance.cc  memory_instance.cc  plugin_attributes.cc  serialized_executable_instance.cc  so_loaded_executable_instance.cc  tensor.cc  tensor_pool.cc  topology_description.cc
pjrt_implementation/src/api/module_builder/: compile_options.cc  module_builder.cc  tt_lang_bridge.cc
pjrt_implementation/src/api/module_builder/frontend_passes/: shlo_clean_for_xla_ingestion.cc  shlo_input_role_propagation.cc  shlo_set_proper_sdy_mesh_attribute.cc
pjrt_implementation/src/api/unit_tests/: buffer_instance_tests.cc  client_instance_tests.cc  compile_options_parser_tests.cc  device_description_tests.cc  device_instance_tests.cc  dummy.cc  error_instance_tests.cc  event_instance_tests.cc  executable_instance_tests.cc  loaded_executable_instance_tests.cc  memory_instance_tests.cc  module_builder_tests.cc  plugin_attributes_tests.cc  tt_lang_bridge_tests.cc
pjrt_implementation/src/api/unit_tests/inc/: unit_test_utils.h
pjrt_implementation/src/entry/: CMakeLists.txt  api_bindings.cc  api_bindings.h  dylib_entry_point.cc
pjrt_implementation/src/utils/: CMakeLists.txt  callback_worker.cc  data_type_utils.cc  logging.cc  stage_tracker.cc
pjrt_implementation/src/utils/unit_tests/: callback_worker_tests.cc  mpsc_queue_tests.cc  test_utils.cc  utils_tests.cc
python_package/: .gitignore  CMakeLists.txt  __init__.py  cleanup.sh  monkeypatch.py  pyproject.toml  repair_wheel.sh  requirements.txt  setup.py
python_package/jax_plugin_tt/: __init__.py  monkeypatch.py
python_package/pjrt_plugin_tt/: __init__.py  wrapper.py
python_package/torch_plugin_tt/: __init__.py
python_package/torch_plugin_tt/experimental/: __init__.py  pipeline.py
python_package/tracy/: __init__.py  __main__.py
python_package/tt_jax/: __init__.py  codegen.py  serialization.py
python_package/tt_onnx/: __init__.py  bridge.py  compiler.py  feed_utils.py  mlir_utils.py  op_matrix.py  plugin_check.py  runtime.py  session.py
python_package/tt_torch/: __init__.py  attention_backend.py  codegen.py  composite_ops.py  custom_backward_ops.py  custom_moe_ops.py  custom_ops.py  debug_utils.py  fused_moe_weights.py  fusion_providers.py  moe_backend.py  moe_stream.py  pre_quantize.py  serialization.py  sharding.py  sparse_mlp.py  stream_experts_kernel.py  tools.py  torch_overrides.py  transformers_cache.py  transformers_overrides.py  tt_lang.py  utils.py  weight_dtype.py
python_package/tt_torch/backend/: backend.py  decomposition_logger.py  decompositions.py  graph_patterns.py  metadata_propagation.py  ourdynamobridge.py  passes.py  quetzal_analysis.py  quetzal_rewrite.py  utils.py
python_package/tt_torch/backend/fusion_passes/: __init__.py  base.py  providers.py  registry.py
python_package/tt_torch/fusion_passes/: __init__.py  providers.py  utils.py
python_package/tt_torch_backend/: __init__.py  serialization.py
python_package/tt_torch_backend/backend/: backend.py  passes.py
python_package/tt_torch_core/: __init__.py
python_package/tt_xla_debug/: __init__.py
python_package/ttnn/: __init__.py
python_package/ttxla_tools/: __init__.py  install_sfpi.py  logging.py  serialization.py
src/common/: CMakeLists.txt  api_impl.cc  api_impl.h  compile_options.cc  compile_options.h  compiler.h  debugging.cc  debugging.h  dylib_entry_point.cc.inc  dylib_platform.cc  dylib_platform.h  layout_utils.cc  layout_utils.h  module_builder.cc  module_builder.h  pipelines.cc  pipelines.h  platform.cc  platform.h  plugin_attributes.cc  plugin_attributes.h  status.h  stubs.inc  tensor_utils.cc  tensor_utils_test.cc
src/common/pjrt_implementation/: api_bindings.cc  bindings.cc  buffer_instance.cc  client_instance.cc  compile_options.cc  data_type_utils.cc  device_description.cc  device_instance.cc  error_instance.cc  event_instance.cc  executable_image.cc  executable_instance.cc  flatbuffer_loaded_executable_instance.cc  loaded_executable_instance.cc  logging.cc  memory_instance.cc  serialized_executable_instance.cc  so_loaded_executable_instance.cc  stubs.inc  utils.cc
src/common/pjrt_implementation/module_builder/: compile_options.cc  module_builder.cc
src/common/pjrt_implementation/module_builder/frontend_passes/: shardy_frontend_attributes.cc  shlo_input_role_propagation.cc  shlo_set_proper_sdy_mesh_attribute.cc
src/common/pjrt_implementation/module_builder/frontend_passes/sdy_round_trip_import/: constants.h  sdy_round_trip_import.cc  utils.cc  utils.h
src/common/util/: lockfile.cc
src/tt/: CMakeLists.txt  client.cc  client.h  dylib_entry_point.cc
tests/pjrt/: CMakeLists.txt  README.md  main.cc  test_main.cc  test_utils.cc
(+12123 files in other folders)
